# kde-builder

./: .gitignore  .gitlab-ci.yml  Dockerfile  Pipfile  README.md  REUSE.toml  analyze-deps.py  deps.stdout  deps.yaml  environment.yml  gen-deps.py  gen-deps.sh  kde-builder  project-info.yaml  pyproject.toml  requirements.txt  ruff.toml  run-docker.sh
.reuse/: dep5
data/: 00-plasma.conf.in  kde-builder-logging.yaml  kde-builder.desktop.in  kde-builder.yaml.in  kde-env-master.sh.in  kdesrc-buildrc.in  supported-formats.yaml  xsession.sh.in
data/clion/: KDE_Builder_run_debug_configuration.xml.in  cmake.xml.in  toolchains.xml
data/completions/: kde-builder-run.sh
data/qtcreator/: CMakeLists.txt.shared.in
data/qtcreator/wizards/kde-frameworks6-cpp/project/autotests/: CMakeLists.txt  settingstest.cpp
data/qtcreator/wizards/kde-frameworks6-cpp/project/src/: CMakeLists.txt  Settings.kcfg  Settings.kcfgc  app.desktop  app.metainfo.xml  app.qrc  appui.rc  main.cpp  settings.ui  view.cpp  view.h  view.ui  window.cpp  window.h
data/qtcreator/wizards/kde-frameworks6-kirigami/project/: CMakeLists.txt  Messages.sh
data/qtcreator/wizards/kde-frameworks6-kirigami/project/autotests/: CMakeLists.txt  greetertest.cpp  qmltest.cpp  tst_greeting.qml
data/qtcreator/wizards/kde-frameworks6-kirigami/project/src/: CMakeLists.txt  Main.qml  app.desktop  app.metainfo.xml  greeter.cpp  greeter.h  main.cpp
data/qtcreator/wizards/kde-frameworks6-simple/project/autotests/: CMakeLists.txt  windowtest.cpp
data/qtcreator/wizards/kde-frameworks6-simple/project/src/: CMakeLists.txt  app.desktop  app.metainfo.xml  main.cpp  window.cpp  window.h
data/vscode/: extensions.json.in  launch.json.in  settings.json.in  tasks.json.in
doc/: 404handler.php  Alternative Installation.md  README.md  conf-options-table.docbook  conf.py  index.md  man-kde-builder.1.md  man-kdesrc-build.1.md
doc/chapter_01/: index.md  intro-toc.md  introduction.md
doc/chapter_02/: alternative-installation.md  building-and-troubleshooting.md  building-specific-modules.md  configure-data.md  environment.md  getting-started.md  index.md  kde-modules-and-selection.md  quick-start-conclusion.md
doc/chapter_03/: features.md  index.md  kde-builder-logging.md  kdesrc-build-logging.md
doc/chapter_04/: conf-options-table.md  index.md  kdesrc-buildrc.md
doc/chapter_05/: cmdline.md  index.md  supported-cmdline-params.md  supported-envvars.md
doc/chapter_06/: advanced-features.md  appendix-profile.md  basic-features.md  developer-features.md  index.md  other-features.md  tips-and-tricks.md  using-kde-builder.md  using-kdesrc-build.md
doc/chapter_07/: index.md  kde-cmake.md
doc/chapter_08/: IPC-notes.md  adding-logger.md  adding-new-options.md  appendix-modules.md  concepts.md  credits-and-license.md  index.md
doc/chapter_09/: changelog.md  credits-and-license.md  index.md
doc/chapter_appendix_A/: appendix-modules.md
doc/chapter_appendix_B/: appendix-profile.md
doc/cmdline/: cmdline-usage.md  index.md  supported-cmdline-params.md  supported-envvars.md
doc/configuration/: conf-options-table.md  config-file-overview.md  index.md
doc/developer/: IPC-notes.md  Internals.md  Module.md  adding-logger.md  appendix-modules.md  appendix-projects.md  concepts.md  ide-configs-generation.md  index.md
doc/features/: features-overview.md  index.md
doc/getting-started/: alternative-installation.md  bash-completion-setup.md  before-building.md  building-and-troubleshooting.md  building-specific-modules.md  configure-data.md  index.md  kde-modules-and-selection.md  kde-projects-and-selection.md  quick-start-conclusion.md
doc/introduction/: brief-intro.md  features-overview.md  index.md  intro-toc.md
doc/kde-cmake/: index.md  kde-cmake-intro.md
doc/kdesrc-buildrc/: conf-options-table.md  index.md  kdesrc-buildrc-overview.md
doc/misc/: changelog.md  index.md
doc/source-reference/: Internals.md  Module.md  index.md
doc/using-kde-builder/: advanced-features.md  basic-features.md  building-qt.md  developer-features.md  index.md  kde-builder-logging.md  other-features.md  tips-and-tricks.md  using-kde-builder-preface.md
kde_builder_lib/: application.py  bst_generator.py  build_context.py  build_exception.py  cmd_line.py  debug.py  debug_order_hints.py  dependency_resolver.py  first_run.py  ide_project_config_generator.py  kb_exception.py  kde_projects_reader.py  log_dir.py  module_resolver.py  options_base.py  os_support.py  phase_list.py  qtcreator_kit_setup.py  qtcreator_presets.py  qtcreator_templates.py  recursive_config_nodes_iterator.py  recursive_fh.py  start_program.py  status_view.py  task_manager.py  version.py
kde_builder_lib/build_system/: autotools.py  build_system.py  cmake_bootstrap.py  kde_cmake.py  meson.py  qmake5.py  qmake6.py  qt4.py  qt5.py  qt6.py
kde_builder_lib/ipc/: ipc.py  null.py  pipe.py
kde_builder_lib/metadata/: kde_projects_reader.py  metadata.py
kde_builder_lib/module/: branch_group_resolver.py  module.py
kde_builder_lib/module_set/: kde_projects.py  module_set.py  null.py  qt5.py
kde_builder_lib/updater/: kde_project.py  kde_project_metadata.py  qt5.py  updater.py
kde_builder_lib/util/: data_path.py  logged_subprocess.py  textwrap_mod.py  util.py  util_package.py
ksblib/: Application.py  BuildContext.py  BuildException.py  Cmdline.py  Debug.py  DebugOrderHints.py  DependencyResolver.py  FirstRun.py  KDEProjectsReader.py  ModuleResolver.py  OSSupport.py  OptionsBase.py  PhaseList.py  RecursiveFH.py  StartProgram.py  StatusView.py  TaskManager.py  Version.py
ksblib/BuildSystem/: Autotools.py  BuildSystem.py  CMakeBootstrap.py  KDECMake.py  Meson.py  QMake.py  QMake5.py  QMake6.py  Qt4.py  Qt5.py  Qt6.py
ksblib/IPC/: IPC.py  Null.py  Pipe.py
ksblib/Module/: BranchGroupResolver.py  Module.py
ksblib/ModuleSet/: KDEProjects.py  ModuleSet.py  Null.py  Qt.py  Qt5.py
ksblib/Updater/: Git.py  KDEProject.py  KDEProjectMetadata.py  (+2 more)
scripts/: build-docs  build_docs.sh  convert_ksb_config.py  gen_zsh_completions.py  initial_setup.sh  spdx_annotate.sh
tests/: README.md
(+75 files in other folders)
